Extend Counters -> SystemCounters and make available via API call
Removed SystemMetaData.